# donormatch

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/donormatch/: __init__.py  cli.py  models.py  report.py  simulator.py
src/donormatch/crm/: __init__.py  campaign.py  donor.py  engagement.py
src/donormatch/matching/: __init__.py  matcher.py  scorer.py  segmenter.py
tests/: test_benchmark.py  test_core.py  test_crm.py  test_integration.py  test_matching.py  test_models.py  test_simulator.py
